# scalable-computation

./: .gitignore  CITATION.cff  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
common/: README.md  obstacles.py  replicated_gbnn.py
configurer/: README.md  open_configurer.py
gbnnh/: README.md  open_gbnnh.py
interstar/: README.md  open_interstar.py
