[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scalable-computation"
version = "0.1.0"
description = "Towards Computationally Scalable Inter-Reconfigurable Robots — PhD thesis codebase"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Ash Wan Yaw Sang", email = "yaw_sang94@hotmail.com"},
]
keywords = [
    "robotics",
    "inter-reconfigurable",
    "motion-planning",
    "coverage",
    "graph-based-neural-networks",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21",
    "pyyaml>=6.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.5"]
pygame = ["pygame>=2.1"]
ros2 = []  # ROS2 Foxy installed via system package, not pip
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
]

[project.urls]
Repository = "https://github.com/AshWan13/scalable-computation"
Issues = "https://github.com/AshWan13/scalable-computation/issues"

[tool.setuptools]
py-modules = ["demo"]
packages = ["common", "configurer", "interstar", "gbnnh"]
